# rvim

./: BLUEPRINT.md  COMMANDS.md  Cargo.toml  NOTES.md  README.md  manual.md  rvim.example.toml
queries/javascript/: highlights.scm
queries/tsx/: highlights.scm
queries/typescript/: highlights.scm
src/: app.rs  logging.rs  main.rs  ui.rs
src/app/: command.rs  config.rs  edit.rs  highlight.rs  input.rs  keymap.rs  mod.rs  motion.rs  theme.rs  types.rs
