[package]
name = "rvim"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
chrono = "0.4"
crossterm = "0.28"
ratatui = "0.29"
unicode-width = "0.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tree-sitter = "0.25.8"
tree-sitter-rust = "0.24.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-json = "0.24.8"
adot-tree-sitter-toml = "0.1.0"
tree-sitter-md = "0.5.2"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-lua = "0.4.1"
tree-sitter-go = "0.25.0"
